comments and suggestions

--- a/tex/jrss-version/bib.bib
+++ b/tex/jrss-version/bib.bib
@@ -1585,3 +1585,13 @@
   year={2017},
   publisher={Mass Medical Soc}
 }
+@article{redelmeier1995probability,
+  title={Probability judgment in medicine: Discounting unspecified possibilities},
+  author={Redelmeier, Donald A and Koehler, Derek J and Liberman, Varda and Tversky, Amos},
+  journal={Medical Decision Making},
+  volume={15},
+  number={3},
+  pages={227--230},
+  year={1995},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
