response to TAG's comments

--- a/tex/jrss-version/bib.bib
+++ b/tex/jrss-version/bib.bib
@@ -1594,3 +1594,11 @@
   year={1995},
   publisher={Sage Publications Sage CA: Thousand Oaks, CA}
 }
+@article{benichou1990estimates,
+  title={Estimates of absolute cause-specific risk in cohort studies},
+  author={Benichou, Jacques and Gail, Mitchell H},
+  journal={Biometrics},
+  pages={813--826},
+  year={1990},
+  publisher={JSTOR}
+}
