smoothing + more comments

--- a/tex/jrss-version/bib.bib
+++ b/tex/jrss-version/bib.bib
@@ -1333,6 +1333,15 @@
     note = {R package version 2023.03.22},
     url = {https://CRAN.R-project.org/package=riskRegression},
 }
+@article{ozenne2017riskregression,
+  title={riskRegression: Predicting the risk of an event using {Cox} regression models},
+  author={Ozenne, Brice and S{\o}rensen, Anne Lyngholm and Scheike, Thomas and Torp-Pedersen, Christian and Gerds, Thomas Alexander},
+  journal={R Journal},
+  volume={9},
+  number={2},
+  pages={440--460},
+  year={2017}
+}
 @article{gonzalez2021stacked,
   title={Stacked inverse probability of censoring weighted bagging: A case study in the InfCareHIV register},
   author={Gonzalez Ginestet, Pablo and Kotalik, Ales and Vock, David M and Wolfson, Julian and Gabriel, Erin E},
